--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <div class="flex-container1">
-        <a class="alexanders" href="#"><h1>Alexandersasasasas</h1></a>
+        <a class="alexanders" href="#"><h1>ö</h1></a>
     </div>
     <div class="flex-container2">
         <a class="simons" href="#"><h1>Simons</h1></a>
