lade till simons i filen

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <body>
 
     <div class="flex-container1">
-        <a class="alexanders" href="#"><h1>ö</h1></a>
+        <a class="alexanders" href="#"><h1>Alexanders</h1></a>
     </div>
     <div class="flex-container2">
-        <a class="simons" href="#"><h1>Simons</h1></a>
+        <a class="simons" onclick="window.open('file:///C:/Users/alexander.kjellber1/Documents/GitHub/01Alekj.github.io/simons');" href="#"><h1>Simons</h1></a>
     </div>
     
 </body>
