testade ändring med simons

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <a class="alexanders" href="#"><h1>Alexanders</h1></a>
     </div>
     <div class="flex-container2">
-        <a class="simons" onclick="window.open('file:///C:/Users/alexander.kjellber1/Documents/GitHub/01Alekj.github.io/simons');" href="#"><h1>Simons</h1></a>
+        <a class="simons" onclick="window.open('/simons');" href="#"><h1>Simons</h1></a>
     </div>
     
 </body>
