tog bort navigartion via mappar i simons

--- a/simons/index.html
+++ b/simons/index.html
@@ -8,9 +8,9 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Cookie clicker 2.0</title>
 
-        <link rel="icon" href="img/cookie.png">
-        <link rel="stylesheet" href="Css/style.css">
-        <script src="js/main.js"></script>
+        <link rel="icon" href="cookie.png">
+        <link rel="stylesheet" href="style.css">
+        <script src="main.js"></script>
 
     </head>
 
@@ -21,7 +21,7 @@
         <h1 id="score">0</h1>
         <p id="per-click">1</p>
         <a href="#" class="clicker" id="cookie" onclick="increase()">
-        <img src="/img/cookie.png" alt=""></a>
+        <img src="cookie.png" alt=""></a>
     </div>
     <aside class="upgrades"> 
         <h1>Shop</h1>   
