--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <a class="alexanders" href="#"><h1>Alexanders</h1></a>
     </div>
     <div class="flex-container2">
-        <a class="simons" onclick="window.open('/simons/index.html');" href="#"><h1>Simons (färdig)</h1></a>
+        <a class="simons" onclick="window.open('/simons/index.html');" href="#"><h1>Simons</h1></a>
     </div>
     
 </body>
