--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <div class="flex-container1">
         <a class="alexanders" href="#"><h1>Alexanders</h1></a>
+        <a class="alexanders" onclick="window.open('/alexanders/Clicker.html');" href="#"><h1>Alexanders</h1></a>
     </div>
     <div class="flex-container2">
         <a class="simons" onclick="window.open('/simons/index.html');" href="#"><h1>Simons</h1></a>
