sista version commit

--- a/alexanders/Clicker.html
+++ b/alexanders/Clicker.html
@@ -7,6 +7,7 @@
     <title>Egg-Master</title>
     <link rel="stylesheet" href="style.css">
     <script src="javascript.js"></script>
+    <link rel="shortcut icon" href="Egg.png" type="image/x-icon">
 </head>
 <body>
 
