--- a/alexanders/Clicker.html
+++ b/alexanders/Clicker.html
@@ -16,7 +16,7 @@
         <main>
             <h1 class="eggs">Eggs</h1>
             <h1 id="scorecounter" >0</h1>
-            <button class="clicker" onclick=oncl()><img src="egg.png" alt=""></button>
+            <button class="clicker" onclick=oncl()><img src="Egg.png" alt=""></button>
         </main>
         <aside class="chickens">
             <div class="h1-container">
