--- a/alexanders/Clicker.html
+++ b/alexanders/Clicker.html
@@ -15,23 +15,23 @@
 
         <main>
             <h1 class="eggs">Eggs</h1>
-            <h1 id="scorecounter" >0</h1>
+            <h1 id="scorecounter">0</h1>
             <a class="clicker" onclick=oncl()><img src="Egg.png" alt=""></a>
         </main>
         <aside class="chickens">
             <div class="h1-container">
                 <h1>Chickens</h1>
             </div>
-            <a onclick=upgrade() id="inc" >New chicken for 100:-</a>
+            <button onclick=upgrade() id="inc" >Get another chicken for 100:-</button>
         </aside>
         <aside class="aside-left">
             <div class="h1-container2">
                 <h1>Warpmachine</h1>
             </div>
-            <a onclick=warpmachine() id="warp1"><p>Get a warpmachine for 1750:-</p></a>
-            <a onclick=warpmachine_upg1() id="warp2"><p>Upgrade warpmachine for 3000:-</p></a>
-            <a onclick=warpmachine_upg2() id="warp3"><p>Upgrade warpmachine for 7000:-</p></a>
-            <a onclick=warpmachine_upg3() id="warp4"><p>Upgrade warpmachine for 20 000:-</p></a>
+            <button onclick=warpmachine() id="warp1">Get a warpmachine for 1750:-</button>
+            <button onclick=warpmachine_upg1() id="warp2">Upgrade warpmachine for 3000:-</button>
+            <button onclick=warpmachine_upg2() id="warp3">Upgrade warpmachine for 7000:-</button>
+            <button onclick=warpmachine_upg3() id="warp4">Upgrade warpmachine for 20 000:-</button>
         </aside>
 
     </div>
