--- a/alexanders/Clicker.html
+++ b/alexanders/Clicker.html
@@ -22,7 +22,7 @@
             <div class="h1-container">
                 <h1>Chickens</h1>
             </div>
-            <button onclick=upgrade() id="inc" >Get another chicken for 100:-</button>
+            <button onclick=upgrade() id="inc" >New chicken for 100:-</button>
         </aside>
         <aside class="aside-left">
             <div class="h1-container2">
